--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@ Siin on rohkem kui sada tähemärki teksti :)
 Siin on rohkem kui sada tähemärki teksti :)
 </pre>
 <table style="width:50%">
-<caption>Korrutustabel</caption>
+<caption>Andmed</caption>
   <tr>
-    <th>*</th>
-    <th>1</th>
-    <th>2</th>
+    <th>ID</th>
+    <th>Kogus</th>
+    <th>Hind</th>
   </tr>
   <tr>
     <td>1</td>
-    <td>1</td>
-    <td>2</td>
-  </tr>
-  <tr>
-    <td>2</td>
-    <td>2</td>
     <td>4</td>
+    <td>400</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>69</td>
+    <td>690</td>
   </tr>
 </table>
 
