--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Lehe pealkiri</title>
+<title>202854</title>
 <style>
 table, th, td {
   border: 1px solid black;
