--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ th {
 
 <h1 style="text-align:center;">Marko Saue</h1>
 
-<p style="color:blue;">202854</p>
+<p style="color:blue;" style="text-align:center;">202854</p>
 <p>
 <br>
 <br>
